[package]
name = "article-actix-hexagonal"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
async-trait = "0.1.82"
clap = { version = "4.5.17", features = ["env", "derive"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
log = "0.4.22"
